Add navbar shapes.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
 
     </div>
     <div style="height:48px"></div>
-    <div class="navbar"></div>
+    <div class="navbar">
+      <div class="navbar-back"></div>
+      <div class="navbar-home"></div>
+      <div class="navbar-recent"></div>
+    </div>
   </body>
 </html>
